--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "recharts": "^2.15.3",
     "resend": "^4.6.0"
   },
