--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.6.1",
+    "dotenv": "^17.2.1",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "next": "15.3.3",
