--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.6.1",
     "dotenv": "^17.2.1",
+    "keen-slider": "^6.8.6",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "next": "15.3.3",
@@ -23,6 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-swipeable": "^7.0.2",
     "recharts": "^2.15.3",
     "resend": "^4.6.0"
   },
